lintian-brush (0.51) UNRELEASED; urgency=medium

  * Add fixer for copyright-refers-to-symlink-license.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Dec 2019 22:59:17 +0000

lintian-brush (0.50) unstable; urgency=medium

  * Add fixer for copyright-does-not-refer-to-common-license-file.
  * Add fixer for copyright-should-refer-to-common-license-file-for-
    apache-2.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Dec 2019 22:12:34 +0000

lintian-brush (0.49) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Add support for upgrading from standards version 4.1.4 -> 4.1.5.
  * Determine secure and browser URLs from Savannah Git URLs; thanks to
    Romain Francoise for the report.
  * Include trailing '.git' in salsa VCS URLs.
  * Guess bug database from forwarded field in debian patches.
  * Add fixer for no-dh-sequencer.
  * Ship a guess-upstream-metadata binary.

  [ Colin Watson ]
  * unnecessary-team-upload: Fix typo in changelog message.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Dec 2019 17:16:42 +0000

lintian-brush (0.48) unstable; urgency=medium

  * For esthetic reasons, keep Description as the last field in binary
    package stanzas.
  * Handle commented out patches in patch-file-present-but-not-mentioned-
    in-series.
  * Add fixer for skip-systemd-native-flag-missing-pre-depends.
  * Reintroduce fixer for removal of empty patches, but hide behind --
    opinionated.
  * Add fixer for invalid-standards-version.
  * Add fixer for declares-possibly-conflicting-debhelper-compat-
    versions.
  * Add fixer for debug-symbol-migration-possibly-complete.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 15 Dec 2019 17:20:33 +0000

lintian-brush (0.47) unstable; urgency=medium

  * Add apply-multiarch-hints script.
  * Add --opinionated option. Closes: #942604
  * useless-autoreconf-build-depends: Depend on debhelper (>= 10~)
    rather than (>= 10). Closes: #946743
  * Don't remove expired keys from upstream signing key. Closes: #946407
