@@ -1,0 +1,2 @@
+Refer to common license file for Apache-2.0.
+Fixed-Lintian-Tags: copyright-does-not-refer-to-common-license-file, copyright-should-refer-to-common-license-file-for-apache-2
