@@ -1,2 +1,0 @@
-Refer to common license file for Apache-2.0.
-Fixed-Lintian-Tags: copyright-should-refer-to-common-license-file-for-apache-2
